--- a/src/popup.html
+++ b/src/popup.html
@@ -53,11 +53,22 @@
       letter-spacing: -0.01em;
     }
 
+    .header-right {
+      margin-left: auto;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+
     .header-tagline {
       font-size: 11px;
-      color: var(--text-muted);
-      margin-left: auto;
+      color: var(--clojure-blue);
       font-weight: 400;
+      text-decoration: none;
+    }
+
+    .header-tagline:hover {
+      text-decoration: underline;
     }
 
     /* Steps */
