--- a/src/popup.html
+++ b/src/popup.html
@@ -27,10 +27,21 @@
     .header {
       display: flex;
       align-items: center;
-      gap: 12px;
+      justify-content: space-between;
+      gap: 4px;
       margin-bottom: 20px;
       padding-bottom: 16px;
       border-bottom: 1px solid var(--border-light);
+    }
+
+    .header-left {
+      display: flex;
+      align-items: center;
+      gap: 4px;
+    }
+
+    .header-left svg {
+      flex-shrink: 0;
     }
 
     .header-logos {
