--- a/extension/popup.html
+++ b/extension/popup.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="shared.css">
   <link rel="stylesheet" href="popup.css">
 </head>
 <body>
