--- a/extension/popup.html
+++ b/extension/popup.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="design-tokens.css">
+  <link rel="stylesheet" href="components.css">
   <link rel="stylesheet" href="shared.css">
   <link rel="stylesheet" href="popup.css">
 </head>
