--- a/extension/popup.html
+++ b/extension/popup.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="design-tokens.css">
   <link rel="stylesheet" href="components.css">
-  <link rel="stylesheet" href="shared.css">
+  <link rel="stylesheet" href="base.css">
   <link rel="stylesheet" href="popup.css">
 </head>
 <body>
